# taocket

./: Cargo.toml  README.md  hello.toml  taocket_config.toml  taoket_types.d.ts  types.d.ts
example/: demo.rs  old_demo.rs
src/: app.rs  config.rs  events.rs  ipc.rs  lib.rs  old_lib.rs  taocket_config.rs  taocket_context.rs  taocket_hotkey.rs  taocket_macro.rs  taocket_protocol.rs  taocket_utils.rs  taocket_window.rs  userevent.rs  windowcontrol.rs  ws.rs
src/scripts/: dragevent.js  index.html  init.js
