[package]
name = "taocket"
description = "Simple tao window with websocket"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
crossbeam-channel = "0.5.15"
flume = "0.11.1"
futures-util = "0.3.31"
once_cell = "1.21.3"
open = "5.3.2"
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tao = "0.34.5"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
ts-rs = "11.1.0"
wry = "0.53.5"

[[bin]]
name = "example"
path = "example/demo.rs"
