[package]
name = "taocket"
description = "Simple tao window with websocket"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
crossbeam-channel = "0.5.15"
flume = "0.11.1"
futures-util = "0.3.31"
global-hotkey = "0.7.0"
include_dir = "0.7.4"
log = "0.4.28"
mime_guess = "2.0.5"
once_cell = "1.21.3"
open = "5.3.2"
parking_lot = "0.12.5"
rust-embed = "8.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tao = "0.34.5"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
toml = "0.9.8"
ts-rs = "11.1.0"
wry = "0.53.5"


[features]
dev = []
default = []

[dev-dependencies]
tempfile = "3.23.0"


# [[bin]]
# name = "example"
# path = "example/demo.rs"
